# youtube_mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPER.md  PACKAGING_PYPI.md  TOOLS.md
src/youtube_mcp/: __init__.py  channel_inventory.py  channel_playlists.py  channel_ref.py  channel_resolver.py  channel_search.py  channel_videos_ordering.py  channel_videos_ordering_local.py  channel_videos_ordering_search.py  google_api.py  inventory_types.py  logger.py  mcp_tools_channel.py  mcp_tools_channel_playlists.py  mcp_tools_channel_search.py  mcp_tools_channel_videos.py  mcp_tools_playlist_videos.py  mcp_tools_video_comments.py  playlist_items_extract.py  playlist_videos.py  quota_budgeter.py  redaction.py  server.py  server_tools.py  transcript_api.py  video_classification.py  video_comments.py  video_sorting.py  youtube_client_protocol.py  youtube_data_api_client.py  youtube_data_api_constants.py  youtube_errors.py  youtube_url.py
tests/: __init__.py  test_channel_inventory_unit.py  test_channel_playlists_unit.py  test_channel_ref_unit.py  test_channel_resolver_unit.py  test_channel_search_unit.py  test_channel_videos_ordering_unit.py  test_context_fix.py  test_inspector.py  test_pagination_aliases_unit.py  test_playlist_videos_unit.py  test_quota_budgeter_unit.py  test_video_classification_unit.py  test_video_comments_unit.py  test_with_api_key.py  test_youtube_data_api_client_unit.py  test_youtube_unit.py  test_youtube_url_unit.py
